# osu_sr_calculator

./: .gitignore  CMakeLists.txt  README.md
osu_sr_calculator/: BeatmapParser.cpp  BeatmapParser.h  DifficultyHitObjectCreator.cpp  DifficultyHitObjectCreator.h  Logger.h  PathApproximator.h  Precision.h  SliderPath.h  StarRatingCalculator.cpp  StarRatingCalculator.h  Utils.h  main.cpp  osu_sr_calculator.h  types.h
osu_sr_calculator/Objects/: SRCVector2.h  Vector2.h
osu_sr_calculator/Objects/osu/: Beatmap.h  HitType.h  PathType.h  SRCBeatmap.h  SRCHitType.h  SRCPathType.h  SRCTimingPoint.h  TimingPoint.h
osu_sr_calculator/Objects/osu/HitObjects/: DifficultyHitObject.h  HitCircle.h  HitObject.h  SRCDifficultyHitObject.h  SRCHitCircle.h  SRCHitObject.h  SRCSlider.h  SRCSpinner.h  Slider.h  Spinner.h
osu_sr_calculator/Objects/osu/HitObjects/SliderObjects/: HeadCircle.h  RepeatPoint.h  SRCHeadCircle.h  SRCRepeatPoint.h  SRCSliderTick.h  SRCTailCircle.h  SliderTick.h  TailCircle.h
osu_sr_calculator/Skills/: Aim.h  OsuStrainSkill.h  SRCAim.h  SRCOsuStrainSkill.h  SRCSpeed.h  Speed.h
